--- a/b-plus-client/src/app/expand-list/expand-list.component.html
+++ b/b-plus-client/src/app/expand-list/expand-list.component.html
@@ -21,10 +21,10 @@
         Data
         <!-- Inserir divisória aqui -->
         Conteúdo
+        <button type="button" (click)="updateList()">Editar</button>
 
-        Salvar
         <!-- Inserir botão aqui  -->
-        Excluir
+        <button type="button" (click)="removeList()">Excluir</button>
         <!-- Inserir botão aqui  -->
       </div>
     </div>
