Started working on books apin calls.

--- a/b-plus-client/src/app/create-list/create-list.component.html
+++ b/b-plus-client/src/app/create-list/create-list.component.html
@@ -48,9 +48,7 @@
             </datalist>
           </div>
 
-          Livros:
-          <!-- Inserir input de pesquisa aqui  -->
-          <!-- Inserir quadro pra pesquisa de livro aqui  -->
+          Livros: Você irá poder inserir livros editando a lista na home page!
 
           <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Salvar</button>
         </form>
