--- a/b-plus-client/src/app/update-list/update-list.component.html
+++ b/b-plus-client/src/app/update-list/update-list.component.html
@@ -48,12 +48,21 @@
             </datalist>
           </div>
 
-          Livros:
-          <!-- Inserir input de pesquisa aqui  -->
-          <!-- Inserir quadro pra pesquisa de livro aqui  -->
-
           <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Salvar</button>
         </form>
+        Livros:
+        <input  class="search-bar-container" [formControl]="queryField" type="text" id="keyword" placeholder="Procure livros..." autofocus/>
+        <ul>
+            <li *ngFor="let results of results ? results.slice(0,60): []; let i = index">
+              <div *ngIf="results.numero_exemplar == 1">
+                <button (click)="onClickInsert(i)">
+                  {{results.titulo_material}}
+                  <p *ngIf="results.volume_exemplar != 0" style="display:inline"> {{results.volume_exemplar}} </p>
+                  {{results.edicao_ano}}
+                </button>
+              </div>
+            </li>
+        </ul>
       </div>
     </div>
   </div>
