--- a/b-plus-client/src/app/expand-list/expand-list.component.html
+++ b/b-plus-client/src/app/expand-list/expand-list.component.html
@@ -5,13 +5,14 @@
   <div class="container global-div">
     <div class="row">
       <div class="col-md-12">
-        Nome: {{this.lista.nome_lista}}
-        Categoria: {{this.lista.categoria_lista}}
+        Nome: {{this.lista.nome_lista}}<br>
+        Categoria: {{this.lista.categoria_lista}}<br>
         Tipo de Lista:
-        {{this.lista.situacao_lista}}
+        {{this.lista.situacao_lista}}<br>
         Criado Por:
-        {{this.user.sobrenome_aluno}}
+        {{this.user.sobrenome_aluno}}<br>
         Livros:
+        {{this.lista}}<br>
 
         Comentários
         <!-- Inserir divisória aqui -->
