--- a/b-plus-client/src/app/home-page/home-page.component.html
+++ b/b-plus-client/src/app/home-page/home-page.component.html
@@ -6,9 +6,9 @@
     <div class="row">
       <div class="col-md-12">
         {{this.lista.nome_lista}}
-        <button type="button" (click)=expandList(i)>Expandir</button>
-        <button type="button" (click)="editList(i)">Editar</button>
-        <button type="button" (click)="removeList(i)">Excluir</button>
+        <button type="button" (click)=expandList(i)><i class="fas fa-angle-down fa-3x"></i></button>
+        <button type="button" (click)="editList(i)"><i class="fas fa-pencil-alt fa-3x"></i></button>
+        <button type="button" (click)="removeList(i)"><i class="fas fa-trash-alt fa-3x"></i></button>
       </div>
     </div>
   </div>
