--- a/b-plus-client/src/app/book-info/book-info.component.html
+++ b/b-plus-client/src/app/book-info/book-info.component.html
@@ -40,7 +40,7 @@
           </form>
         </div>
 
-        <div class="container global-div" *ngFor="let lista of lista; let i = index">
+        <div class="container global-div" *ngFor="let review of review; let i = index">
           <div class="row">
             <div class="col-md-12">
               {{this.review.conteudo_comentario}}
