--- a/b-plus-client/src/app/header/header.component.css
+++ b/b-plus-client/src/app/header/header.component.css
@@ -1,115 +1,132 @@
 .guest-bar-container{
   background-color: #1C155B;
-  box-shadow: 2px;
   width: 100%;
   height: 60px;
   position: fixed;
   top: 0;
 }
 
-  .user-bar-container{
-    background-color: white;
-    color: grey;
-    border-bottom: 1px grey solid;
-    box-shadow: 2px;
-    width: 100%;
-    height: 60px;
-    left:250px;
-    position: fixed;
-    top: 0;
-  }
+.user-bar-container{
+  background-color: white;
+  width: 100%;
+  height: 60px;
+  left:250px;
+  position: fixed;
+  top: 0;
+}
 
-  .search-bar-container{
-    background-color: white;
-    color: grey;
-    border-bottom: 1px grey solid;
-    box-shadow: 2px;
-    width: 60%;
-    height: 60px;
-    top: 0;
-  }
+.search-bar-container{
+  background: transparent;
+  border-style: none;
+  width: 50%;
+  height: 60px;
+  top: 0;
+}
 
-  .search-button{
-    color: white;
-    background-color: blue;
-    padding-left: 15px;
-    padding-right: 15px;
-    width: 20%;
-    height: 100%;
-    top: 0;
-  }
+input:focus{
+  outline: none;
+}
 
-  .search-bar-suggestions-container{
-    background-color: white;
-    color: grey;
-    border-bottom: 1px grey solid;
-    box-shadow: 2px;
-    width: 60%;
-    height: 30px;
-  }
+input::placeholder{
+  padding-left: 10px;
+}
 
-  .search-bar-suggestions{
-    background-color: white;
-    color: black;
-    border: 1px grey solid;
-    width: 60%;
-    height: 30px;
-    left:250px;
-    top: 60px;
-  }
 
-  .notification{
-    text-align: right;
-    padding-right: 30px;
-    padding-top: 18px;
-    font-size: 20px;
-  }
+.search-button{
+  font-family: 'Open Sans', SansSerif;
+  font-size: 1em;
+  text-decoration: none;
+  color: white;
+  border-radius: 2px;
+  background-color: #1C155B;
+  margin-left: 1%;
+  margin-right: 1%;
+  padding-left: 0.5%;
+  padding-right: 0.5%;
+}
 
-  .sidebar-container{
-    background-color: #43425D;
-    height: 100%;
-    width:250px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-  }
+.search-bar-suggestions-container{
+  background-color: white;
+  color: grey;
+  border-bottom: 1px grey solid;
+  box-shadow: 2px;
+  width: 60%;
+  height: 30px;
+}
 
-  .navbar-header{
-    background-color: #36354b;
-    padding-bottom: 20px;
-  }
+.search-bar-suggestions{
+  background-color: white;
+  color: black;
+  border: 1px grey solid;
+  width: 60%;
+  height: 30px;
+  left:250px;
+  top: 60px;
+}
 
-  .sidebar-brand{
-    padding-top: 30px;
-    padding-left: 25px;
-    padding-right: 20px;
-    padding-bottom: 10px;
-    width:100%;
-  }
+.user-name{
+  font-family: 'Open Sans', SansSerif;
+  font-size: 1em;
+  text-decoration: none;
+  color: #1C155B;
+}
 
-  nav.sidebar ul{
-    list-style: none;
-    margin-left: 0px;
-    padding-left: 0px;
-  }
+.user_icon{
+  padding-right: 0.5%;
+  margin-left: 2%;
+  position: relative;
+  top: 5px;
+}
 
-  nav.sidebar .navbar-nav > li{
-    padding-top: 20px;
-    padding-left: 20px;
-    padding-bottom: 20px;
-    text-align: justify;
-    text-indent: none;
-    font-size: 14px;
-    text-decoration: none;
-  }
+.notification{
+  text-align: right;
+  padding-right: 30px;
+  padding-top: 18px;
+  font-size: 20px;
+}
 
-  nav.sidebar .navbar-nav > li:hover{
-    background-color: #36354b;
-    width:100%;
-  }
+.sidebar-container{
+  background-color: #43425D;
+  height: 100%;
+  width:250px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+}
 
-  nav.sidebar a{
-    color: white;
-    text-decoration: none;
-  }
+.navbar-header{
+  background-color: #36354b;
+  padding-bottom: 20px;
+}
+
+.sidebar-brand{
+  padding: 30px 20px 10px 25px;
+  width:100%;
+}
+
+nav.sidebar ul{
+  list-style: none;
+  margin-left: 0px;
+  padding-left: 0px;
+}
+
+nav.sidebar .navbar-nav > li{
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  text-align: justify;
+  text-indent: none;
+  font-size: 14px;
+  text-decoration: none;
+}
+
+nav.sidebar .navbar-nav > li:hover{
+  background-color: #36354b;
+  width:100%;
+}
+
+nav.sidebar a{
+  color: white;
+  text-decoration: none;
+}
