--- a/b-plus-client/src/app/search-page/search-page.component.html
+++ b/b-plus-client/src/app/search-page/search-page.component.html
@@ -8,7 +8,7 @@
         <ul>
         <li *ngFor="let results of results | paginate: {  itemsPerPage: 50,
                                                           currentPage: p}">
-          <button (click)="onClick(results.id_material)" *ngIf="results.numero_exemplar == 1">
+          <button class="button_book" (click)="onClick(results.id_material)" *ngIf="results.numero_exemplar == 1">
             {{results?.titulo_material}}
             <p *ngIf="results.volume_exemplar != 0" style="display:inline"> {{results?.volume_exemplar}}</p>
             {{results?.edicao_ano}}
